# Dama

./: README.md
client/: build.gradle  settings.gradle
client/src/java/cz/nevimjak/client/: AlertFactory.java  App.java  Main.java  Reciever.java  SceneEnum.java
client/src/java/cz/nevimjak/client/controller/: AbstractController.java  ConnectController.java  GameController.java  LobbyController.java  ResultController.java  RoomController.java
client/src/java/cz/nevimjak/client/model/: ConnectionModel.java  GameModel.java  MessageHandler.java  PieceType.java  Player.java  Point.java  Room.java  Stats.java
client/src/resources/: connect.fxml  room.fxml
lib/server/: CMakeLists.txt  commands.h  game.c  game.h  main.c  main.h  server.c  server.h
